# tutorial-pybr

./: LICENSE  pyproject.toml
.github/workflows/: main.yml
.github/workflows /: main.yml
api_pedidos/: api.py  esquema.py
tests/: test_api.py
