[tool.poetry]
name = "tutorial-pybr"
version = "0.1.0"
description = ""
authors = ["Alessandro Santos <alpsantos@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
httpx = "^0.24.0"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79